# live-py

./: .gitignore  README.md  pyproject.toml
discipline/: scanner.py
examples/: basic_chat.py  gift_streak.py  gift_tracker.py  online_check.py  profile_lookup.py  stream_info.py
piratetok_live/: __init__.py  client.py  errors.py
piratetok_live/auth/: ttwid.py
piratetok_live/connection/: frames.py  url.py  wss.py
piratetok_live/events/: router.py  types.py
piratetok_live/helpers/: __init__.py  gift_streak.py  like_accumulator.py  profile_cache.py
piratetok_live/http/: api.py  profile_cache.py  sigi.py  ua.py
piratetok_live/proto/: messages.py  schema.py
tests/: test_api_integration.py  test_multi_stream_load.py  test_replay.py  test_wss_smoke.py
